[tool.poetry]
name = "concurrency"
version = "0.1.0"
description = ""
authors = ["Hemanth <hemanthhari2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pillow = "^11.1.0"
httpx = "^0.28.1"
pydantic = "^2.10.6"
pendulum = "^3.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.6"

[tool.ruff]
exclude = [".env", ".venv", "venv", "notebooks"]
line-length = 79
output-format = "full"

[tool.ruff.lint]
fixable = ["I"]
ignore = ["E501"]
select = ["E", "F", "I", "W"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
